Create modular files and call from main.py file

--- a/python/src/code_test.ipynb
+++ b/python/src/code_test.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
+    "\n",
     "class SequenceGen:\n",
     "\n",
     "    NUCLEOTIDOS = ['a', 'c', 'g', 't']\n",
@@ -19,9 +21,21 @@
     "            sequence = f.read()\n",
     "            return cls(sequence.replace(\"\\n\",\"\").lower())\n",
     "        \n",
-    "    def sequence_lenght(self) -> int:\n",
+    "    def measure_execution_time(func):\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            start_time = time.perf_counter()\n",
+    "            result = func(*args, **kwargs)\n",
+    "            end_time = time.perf_counter()\n",
+    "            execution_time = end_time - start_time\n",
+    "            print(f\"Execution time for function {func.__name__} is {execution_time:.4f} seconds\")\n",
+    "            return result\n",
+    "        return wrapper\n",
+    "\n",
+    "    @measure_execution_time \n",
+    "    def sequence_length(self) -> int:\n",
     "        return len(self.sequence)\n",
     "    \n",
+    "    @measure_execution_time\n",
     "    def nucleotido_counter(self) -> list:\n",
     "        output = []\n",
     "        for n in self.NUCLEOTIDOS:\n",
@@ -30,6 +44,7 @@
     "\n",
     "        return output\n",
     "    \n",
+    "    @measure_execution_time\n",
     "    def sub_sequence_counter(self, sub_sequence: str) -> int:\n",
     "        sub_sequence = sub_sequence.lower()\n",
     "        start_index = 0\n",
@@ -50,26 +65,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24530220\n",
-      "[('a', 6132831), ('c', 6130034), ('g', 6134527), ('t', 6132828)]\n",
-      "5883\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "file_path = '/Users/seba/Documents/Data Engineering Development/Tech Interviews/arcoprime_de_test/python/data/sequence_dna'\n",
-    "sequence = SequenceGen.sequence_from_file(file_path)\n",
+    "import os\n",
     "\n",
-    "print(sequence.sequence_lenght())\n",
-    "print(sequence.nucleotido_counter())\n",
-    "print(sequence.sub_sequence_counter('TGCCAG'))"
+    "file_path = os.getcwd()[:len(os.getcwd())-4]+'/data/sequence_dna'\n",
+    "sequence = SequenceGen.sequence_from_file(file_path)\n",
+    "sub_sequence = 'TGCCAG'\n",
+    "\n",
+    "sequence_len = sequence.sequence_length()\n",
+    "print(f\"The sequence length has {sequence_len} nucleotides \\n\")\n",
+    "\n",
+    "nucleotido_count = sequence.nucleotido_counter()\n",
+    "print(f\"The sequence has the following resume by nucleotide {nucleotido_count} \\n\")\n",
+    "\n",
+    "sub_sequence_count = sequence.sub_sequence_counter(sub_sequence)\n",
+    "print(f\"The sequence contains the subsequence {sub_sequence} {sub_sequence_count} times\\n\")\n"
    ]
   },
   {
