--- a/python/src/code_test.ipynb
+++ b/python/src/code_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,7 @@
     "    \n",
     "    @measure_execution_time\n",
     "    def nucleotido_counter(self) -> list:\n",
-    "        output = []\n",
-    "        for n in self.NUCLEOTIDOS:\n",
-    "            quantity = self.sequence.count(n)\n",
-    "            output.append((n, quantity))\n",
-    "\n",
-    "        return output\n",
+    "        return [(n, self.sequence.count(n)) for n in self.NUCLEOTIDOS]\n",
     "    \n",
     "    @measure_execution_time\n",
     "    def sub_sequence_counter(self, sub_sequence: str) -> int:\n",
@@ -84,13 +79,6 @@
     "sub_sequence_count = sequence.sub_sequence_counter(sub_sequence)\n",
     "print(f\"The sequence contains the subsequence {sub_sequence} {sub_sequence_count} times\\n\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
